--- a/example-code.yml
+++ b/example-code.yml
@@ -86,6 +86,7 @@
       - "{{ with_output.stdout_lines }}"
 
 ##-----------------------------------------------------------------------------------------------
+Test
 ##-----------------------------------------------------------------------------------------------
 ##-----------------------------------------------------------------------------------------------
 ##-----------------------------------------------------------------------------------------------
