--- a/commands.yml
+++ b/commands.yml
@@ -79,7 +79,7 @@ roles/apache/meta/main.yml #Contains dependencies, dont have to list the tasks s
 Variables
 ######################################
 #Different version of the applicaiton to different hosts is possible with vars
-ansible -m setup #gives the facts and this can be referenced in any yml file
+ansible all -m setup "filter=ansible_os_family" #gives the facts and this can be referenced in any yml file
 
 #chap 8 for templates; specific values in default dir and the j2 file in templates folder
 hash_behaviour: merge  ---#ansible.conf file
